--- a/index.html
+++ b/index.html
@@ -10,17 +10,21 @@
 </head>
 <body>
     <nav>
-      <span>
-          <p class="nazov"><a href="index.html"></a>Chilli Mania</p>
-        <div>
-          <ul class="nav_links">
-            <li><a href="top10chilli.html">Top 10 list</a></li>
-            <li><a href="recepis.html">Recepies</a></li>
-            <li><a href="howtogrow.html">How to grow your chilli</a></li>
-          </ul>
-        </div>
-        <a class="cta" href="#"><button>Contact</button></a>
-      </span>
+      <div class="nazov">
+      <p >Chilli Mania</p>
+      </div>
+      <div class="nav_links">
+       
+          <a href="top10chilli.html">Top 10 list</a>
+          <a href="recepis.html">Recepies</a>
+          <a href="howtogrow.html">How to grow your chilli</a>
+        
+      </div>
+      <div class="cta">
+      <a href="#"><button>Contact</button></a>
+    </div>
     </nav>
+<img class="BG" src="index_background.png">
 </body>
 </html>
+
