--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,25 +5,28 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href = "style.css" rel="stylesheet">
+  <script type="module" src="main.js"></script>
   <title>Home</title>
 </head>
-<body>
-    <nav>
-      <div class="nazov">
-      <p >Chilli Mania</p>
-      </div>
-      <div class="nav_links">
-       
-          <a href="top10chilli.html">Top 10 list</a>
-          <a href="recepis.html">Recepies</a>
-          <a href="howtogrow.html">How to grow your chilli</a>
-        
-      </div>
-      <div class="cta">
-      <a href="#"><button>Contact</button></a>
+
+<body class="index">
+
+  <nav class="lista">
+    <a class="nazov" href="index.html">Chilli Mania</a>
+    <div class="nav_links">
+        <a href="top10chilli.html">Top 10 list</a>
+        <a href="recipes.html">Recepty</a>
+        <a href="howtogrow.html">Pestovanie Chilli</a>
     </div>
-    </nav>
-<img class="BG" src="index_background.png">
+  </nav>
+
+  <img class="duck" src="kawaii_duck_png_by_milosii_df87clj-pre.png">
+  <img class="blood" src="krvicka.png">
+
+  <footer>
+    <p>&copy; Turis Ondrej II.A .2023</p>
+  </footer>
+
 </body>
 </html>
 
