--- a/howtogrow.html
+++ b/howtogrow.html
@@ -16,7 +16,7 @@
             <a href="howtogrow.html">Pestovanie Chilli</a>
         </div>
     </nav>
-
+    <div class="obsah">
     <h1 id = "nazov">Naučte sa pestovať chilli !</h1>
     <img class="rastucechilli" src="rastuce_chilli.png">
 
@@ -269,5 +269,6 @@
             <li>Počas niekoľkých dní ju postupne presúvajte na viac slnka</li>
             <li>Konečné umiestnenie by malo byť na plnom slnku</li>
         </ol>
+    </div>
 </body>
 </html>
