--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
   <img class="duck" src="kawaii_duck_png_by_milosii_df87clj-pre.png">
   <img class="blood" src="krvicka.png">
+  <audio class="myAudio" src="Duck - QuickSounds.com(1).mp3" controls></audio>
 
   <footer>
     <p>&copy; Turis Ondrej II.A .2023</p>
